tests/snapshots/parser__arithmetic__add.snap
---
source: tests/parser.rs
expression: "parse(\"1 + 2\")"
---
Ok(
    [
        Expr(
            Binary {
                op: Add,
                lhs: Int(
                    1,
                    Span {
                        start: 0,
                        end: 1,
                    },
                ),
                rhs: Int(
                    2,
                    Span {
                        start: 4,
                        end: 5,
                    },
                ),
                span: Span {
                    start: 0,
                    end: 5,
                },
            },
        ),
    ],
)
