tests/snapshots/parser__arithmetic__call_in_expr.snap
---
source: tests/parser.rs
expression: "parse(\"f(1) + 2\")"
---
Ok(
    [
        Expr(
            Binary {
                op: Add,
                lhs: Call {
                    callee: Identifier(
                        "f",
                        Span {
                            start: 0,
                            end: 1,
                        },
                    ),
                    args: [
                        Int(
                            1,
                            Span {
                                start: 2,
                                end: 3,
                            },
                        ),
                    ],
                    span: Span {
                        start: 0,
                        end: 4,
                    },
                },
                rhs: Int(
                    2,
                    Span {
                        start: 7,
                        end: 8,
                    },
                ),
                span: Span {
                    start: 0,
                    end: 8,
                },
            },
        ),
    ],
)
