tests/snapshots/parser__arithmetic__mixed_with_floats.snap
---
source: tests/parser.rs
expression: "parse(\"1.5 + 2\")"
---
Ok(
    [
        Expr(
            Binary {
                op: Add,
                lhs: Float(
                    1.5,
                    Span {
                        start: 0,
                        end: 3,
                    },
                ),
                rhs: Int(
                    2,
                    Span {
                        start: 6,
                        end: 7,
                    },
                ),
                span: Span {
                    start: 0,
                    end: 7,
                },
            },
        ),
    ],
)
