tests/snapshots/parser__arithmetic__mul.snap
---
source: tests/parser.rs
expression: "parse(\"4 * 6\")"
---
Ok(
    [
        Expr(
            Binary {
                op: Mul,
                lhs: Int(
                    4,
                    Span {
                        start: 0,
                        end: 1,
                    },
                ),
                rhs: Int(
                    6,
                    Span {
                        start: 4,
                        end: 5,
                    },
                ),
                span: Span {
                    start: 0,
                    end: 5,
                },
            },
        ),
    ],
)
