tests/snapshots/parser__arithmetic__parens_grouping.snap
---
source: tests/parser.rs
expression: "parse(\"(1 + 2) * 3\")"
---
Ok(
    [
        Expr(
            Binary {
                op: Mul,
                lhs: Binary {
                    op: Add,
                    lhs: Int(
                        1,
                        Span {
                            start: 1,
                            end: 2,
                        },
                    ),
                    rhs: Int(
                        2,
                        Span {
                            start: 5,
                            end: 6,
                        },
                    ),
                    span: Span {
                        start: 0,
                        end: 7,
                    },
                },
                rhs: Int(
                    3,
                    Span {
                        start: 10,
                        end: 11,
                    },
                ),
                span: Span {
                    start: 0,
                    end: 11,
                },
            },
        ),
    ],
)
