tests/snapshots/parser__arithmetic__sub.snap
---
source: tests/parser.rs
expression: "parse(\"5 - 3\")"
---
Ok(
    [
        Expr(
            Binary {
                op: Sub,
                lhs: Int(
                    5,
                    Span {
                        start: 0,
                        end: 1,
                    },
                ),
                rhs: Int(
                    3,
                    Span {
                        start: 4,
                        end: 5,
                    },
                ),
                span: Span {
                    start: 0,
                    end: 5,
                },
            },
        ),
    ],
)
